User can change a disabled select (drop down box) https://bugs.webkit.org/show_bug.cgi?id=100932

Patch by Kunihiko Sakamoto <ksakamoto@chromium.org> on 2012-11-08
Reviewed by Kent Tamura.

Source/WebCore:

<select> should not handle events if it's disabled.

Test: fast/forms/select/select-disabled.html

* html/HTMLSelectElement.cpp:
(WebCore::HTMLSelectElement::defaultEventHandler):

LayoutTests:

Verify that keyboard events do not change value of disabled select.

* fast/forms/select/select-disabled-expected.txt: Added.
* fast/forms/select/select-disabled.html: Added.

git-svn-id: svn://svn.chromium.org/blink/trunk@133860 bbb929c8-8fbe-4397-9dbb-9b2b20218538