third_party/WebKit/Source/WebCore/html/HTMLSelectElement.cpp
@@ -1441,6 +1441,11 @@ void HTMLSelectElement::defaultEventHandler(Event* event)
     if (!renderer())
         return;
 
+    if (disabled()) {
+        HTMLFormControlElementWithState::defaultEventHandler(event);
+        return;
+    }
+
     if (usesMenuList())
         menuListDefaultEventHandler(event);
     else 
